start working on lab3

--- a/lab3/index.html
+++ b/lab3/index.html
@@ -7,6 +7,7 @@
 <body>
   <form id="weather">
     <!-- TODO: Add a label corresponding to the zipCode input -->
+    <label for="zipCode">Zip Code</label>
     <input type="text" id="zipCode" name="zipCode" />
     <button type="submit">Get Weather</button>
   </form>
@@ -22,6 +23,10 @@
         <td id="temp"></td>
       </tr>
       <!-- TODO: Add a row for wind speed -->
+      <tr>
+        <td>Windspeed:</td>
+        <td id="windspeed"></td>
+      </tr>
     </table>
   </div>
   <script type="text/javascript">
